# prime_Juanyu_Liu

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  prime.py  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat  modules.rst  prime_jl6576.rst
docs/docs/: conf.py  index.rst
src/prime_jl6576/: __init__.py
tests/: test_prime_jl6576.py
