[tool.poetry]
name = "prime_jl6576"
version = "0.1.0"
description = "A package for identify a prime"
authors = ["Juanyu Liu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
